<resources>
    <string name="app_name">Financial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Items Title -->
    <string name="menu_home">home</string>
    <string name="menu_setting">Setting</string>

    <string name="menu_expenses">Expenses</string>
    <string name="menu_income">Income</string>

    <string name="menu_stock">Stock</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_fund">Fund</string>
    <string name="menu_bond">Bond</string>
    <string name="menu_accountReceivable">Account Receivable</string>
    <string name="menu_accountPayable">Account Payable</string>

    <!-- ***************************** -->
    <string name="cashFlow_check">Check</string>
    <string name="cashFlow_clear">Clear</string>
    <string name="cashFlow_amount_hint">Amount...</string>
    <string name="cashFlow_remark_hint">Remark...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otherMethodHint_cashFlow">other method ...</string>
    <string name="otherItemsHint_cashFlow">other items ...</string>
    <string name="spot_time_deposits">Spot Time Deposits</string>
    <string name="spot_demand_deposits">Spot Demand Deposits</string>
    <string name="cash">Cash</string>

</resources>
