<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
<!--    </group>-->

    <item android:title="Assets">
        <menu>
            <item
                android:id="@+id/nav_deposit"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_deposit" />
            <item
                android:id="@+id/nav_exchange"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_exchange" />
            <item
                android:id="@+id/nav_stock"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_stock" />

            <item
                android:id="@+id/nav_fund"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_fund" />

            <item
                android:id="@+id/nav_bond"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_bond" />

            <item
                android:id="@+id/nav_account_receivable"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_accountReceivable" />

            <item
                android:id="@+id/nav_account_payable"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_accountPayable" />
        </menu>
    </item>

    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
